# waw-rs

./: Cargo.toml  README.md  TODO.md
.cargo/: config.toml
demo/: .gitignore  Cargo.toml  README.md  index.html  main.ts  package-lock.json  package.json  vite.config.js  vite.config.ts
demo/.cargo/: config.toml
demo/app/: Cargo.toml  README.md  main.ts  package.json  rust-toolchain  vite.config.js
demo/app/src/: gain.rs  lib.rs  oscillator.rs
demo/src/: filter.rs  gain.rs  lib.rs  oscillator.rs  polyfill.min.js  worklet_a.rs  worklet_b.rs
demo/xtask/: Cargo.toml
demo/xtask/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs  module.rs  node.rs  parameter_descriptor.rs  parameter_descriptors.rs  raw_describe.rs  raw_hack_describe.rs  worklet.rs
macros/tests/: audio_worklet.rs  full_macro_test.rs  parameter_descriptor.rs  parameter_descriptors.rs
wasm-worklet/: Cargo.toml
wasm-worklet/src/: buffer.rs  lib.rs  node.rs  polyfill.js  types.rs  worklet.rs
wasm-worklet/src/utils/: callback.rs  environment.rs  macros.rs  mod.rs
waw/: Cargo.toml
waw-thread/: Cargo.toml
waw-thread/src/: audio_worklet.rs  js.rs  lib.rs  script_url.rs  worklet.min.js
waw/src/: buffer.rs  lib.rs  macros.rs  node.rs  parameter.rs  processor.rs  registry.rs  types.rs  worklet.rs  wrapper.rs
waw/src/polyfill/: text-encoder-decoder.js
waw/src/utils/: callback.rs  environment.rs  import_meta.rs  macros.rs  mod.rs
web-thread-fork/: Cargo.toml  README.md  clippy.toml  notes.md  webdriver.json
web-thread-fork/examples/: audio_worklet.rs
web-thread-fork/minimal-versions/: Cargo.toml
web-thread-fork/src/: lib.rs
web-thread-fork/src/thread/: audio_worklet.rs  builder.rs  global.rs  js.rs  mod.rs  scope.rs  spawn.rs  yield_now.rs
web-thread-fork/src/thread/atomics/: channel.rs  js.rs  main.rs  memory.rs  mod.rs  oneshot.rs  parker.rs  url.rs  wait_async.rs
web-thread-fork/src/thread/atomics/audio_worklet/: js.rs  main.rs  mod.rs  processor.rs
web-thread-fork/src/thread/atomics/audio_worklet/register/: message.rs  mod.rs
web-thread-fork/src/thread/atomics/script/: eslint.config.mjs  package.json  tsconfig.json  wait_async.min.js  wait_async.ts  wasm_bindgen_shim.d.ts  web_thread_worklet.d.ts  worker.min.js  worker.ts  worker_with_audio_worklet.min.js  worker_with_audio_worklet.ts  worklet.min.js  worklet.ts  worklet_with_message.min.js  worklet_with_message.ts
web-thread-fork/src/thread/atomics/spawn/: message.rs  mod.rs
web-thread-fork/src/thread/unsupported/: audio_worklet.rs  js.rs  mod.rs  parker.rs
web-thread-fork/src/web/: audio_worklet.rs  message.rs  mod.rs
web-thread-fork/tests/: audio_worklet_fail.rs  audio_worklet_fail_async.rs  audio_worklet_message_success.rs  audio_worklet_success.rs  basic_fail.rs  basic_fail_async.rs  basic_success.rs  basic_success_async.rs  compile_test.rs  dedicated_corrupt.rs  dedicated_fail.rs  dedicated_success.rs  main_corrupt.rs  main_fail.rs  main_success.rs  message_success.rs  service_fail.rs  service_success.rs  shared_fail.rs  shared_success.rs  supported_block.rs  supported_spawn_corrupt.rs  supported_spawn_fail.rs  supported_spawn_success.rs  test_processor.rs  traits.rs  unsupported_block.rs  unsupported_spawn.rs  util.rs
web-thread-fork/tests/compile-fail/: scope_async_await.rs  scope_async_into_await.rs  scope_nested.rs  scope_nested_async.rs  scope_nested_async_await.rs
xtask-waw/: Cargo.toml  README.md
xtask-waw/src/: dist.rs  lib.rs  worklet.entry.js
