[workspace]
resolver = "2"

members = [
    "waw",
    "demo"
]

[profile.release]
# TODO setting opt-level = 1+ causes build failure: wasm_bindgen::__rt::wbg_cast::breaks_if_inlined::hdd77fa1f6c243ef3: unknown instruction Block(Block { seq: Id { idx: 1 } })
#       https://github.com/wasm-bindgen/wasm-bindgen/blob/4d43146fc6b179c3e66809a4cf08c9858b38e4bf/CHANGELOG.md?plain=1#L37-L41
opt-level = 0
# TODO: look into why this needs to be enabled. 
#       https://github.com/daxpedda/wasm-worker/blob/ce376d95dbdd9e7b59ac7de9c6f14090076f7865/src/thread/atomics/memory.rs#L26
debug-assertions = true
