[package]
name = "wasm-worklet-demo"
version = "0.1.0"
authors = ["Marcel Gleeson <gleeson.marcel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-worklet = { path = "../wasm-worklet" }

wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.33"

# @todo remove this dependency - https://gitlab.com/KonradBorowski/enum-map/-/issues/22
enum-map = "2.4.1"
tsify = { version = "0.4.3", features = ["js"] }

dasp = { version = "0.11.0", features = ["signal"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
