[package]
name = "waw-demo"
version = "0.1.0"
authors = ["Marcel Gleeson <gleeson.marcel@gmail.com>"]
edition = "2021"
rust-version = "1.90"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
waw = { path = "../waw" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.59"
features = [
  "AudioContext",
  "AudioWorkletNode",
]

