[package]
name = "waw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
shared-memory = []

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
futures = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
enum-map = "2.4.1"
serde_json = "1.0"

tsify = { version = "0.4.3", features = ["js"] }

waw-macros = { path = "../macros" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
version = "0.3.59"
features = [
  "AudioContext",
  "AudioDestinationNode",
  "AudioWorklet",
  "AudioParam",
  "AudioParamMap",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "AudioWorkletProcessor",
  "MessagePort",
  "MessageEvent",
  "AddEventListenerOptions",
  "Blob",
  "Request",
  "Response",
  "BlobPropertyBag",
  "Url",
  "Window",
  "console"
]