[package]
name = "waw"
version = "0.2.0"
edition = "2021"

# IMPORTANT: This crate requires +atomics and +bulk-memory target features
# along with additional linker flags for shared memory support.
# See README.md for complete .cargo/config.toml configuration.

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
js-sys = "0.3.80"
wasm-bindgen = { version = "0.2.98", default-features = false }
wasm-bindgen-futures = "0.4.48"
web-thread = { git = "https://github.com/daxpedda/wasm-worker", rev = "ce376d95dbdd9e7b59ac7de9c6f14090076f7865", features=["audio-worklet"] }

[dependencies]
inventory = "0.3.21"

[dependencies.web-sys]
version = "0.3.59"
features = [
  "AudioContext",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "AudioDestinationNode",
  "AudioWorkletProcessor",
  "AudioWorklet",
  "console"
]
