[package]
name = "xtask-waw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm-opt = ["xtask-wasm/wasm-opt"]

[dependencies]
anyhow = "1.0.69"
env_logger = "0.9"
log = "0.4"
xtask-wasm = { git = "https://github.com/Marcel-G/xtask-wasm" }